--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
         <div class="wrapper"> 
             <div id="target">
                 <!-- Pythonex Logo -->
-                <figure class = "logo">
-                    <img src= "img/Pythonex-05.png">
+                <figure>
+                    <img class = "logo" src= "img/Pythonex-05.png">
+                    <!-- <img class = "logo" src= "img/Pythonex-03.png"> -->
                 </figure>
             </div>
             <!-- Splash Nav -->
             <div id="splash-nav">
                 <nav>
-                    <a href="" class = "button">ENTER</a>
+                    <a href="" class = "button">coming soon...</a>
                 </nav>
             </div>
         </div> 
