added fangs effect

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                             <polygon class="st0" points="530.07,168.5 428.1,290.41 417.87,301.54 369.03,354.72 206.97,354.72 158.13,301.54 147.9,290.41 
                                 45.93,168.5 101.78,87.36 474.22,87.36 	"/>
                         </g>
+                        <g class = "fangs">
+                            <polygon points="414.21,317.35 427.31,361.5 435.75,293.74 	"/>
+                            <polygon points="148.69,361.5 161.79,317.35 140.25,293.74 	"/>
+                        </g>
                     </svg>
                 </figure>
             </div>
