--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                     <!-- Generator: Adobe Illustrator 24.1.2, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         viewBox="0 0 576 393.06" style="enable-background:new 0 0 576 393.06;" xml:space="preserve" class = "logo">
-                        <style type="text/css">
-                            .st0{fill:none;stroke:#000000;stroke-width:16;stroke-miterlimit:10;}
-                        </style>
+                        <!-- <style type="text/css">
+                            .st0{fill:none;stroke:#dedede;stroke-width:16;stroke-miterlimit:10;}
+                        </style> -->
                         <g>
                             <path d="M106.23,41.65h9.43l2.61,1.66v9.27l-2.61,1.66h-5.26v8.39h-4.17V41.65z M114.1,51.48v-7.06l-0.87-0.55h-2.82v8.17h2.82
                                 L114.1,51.48z"/>
@@ -30,7 +30,7 @@
                             <path d="M469.77,62.62h-4.17l-2.91-6.79l-2.78,6.79h-4l4.91-10.68l-4.69-10.29h4.17l2.65,6.57l2.61-6.57h4l-4.69,10.29
                                 L469.77,62.62z"/>
                         </g>
-                        <g>
+                        <g class = "head">
                             <polygon class="st0" points="530.07,168.5 428.1,290.41 417.87,301.54 369.03,354.72 206.97,354.72 158.13,301.54 147.9,290.41 
                                 45.93,168.5 101.78,87.36 474.22,87.36 	"/>
                         </g>
