--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
                         <!-- <style type="text/css">
                             .st0{fill:none;stroke:#dedede;stroke-width:16;stroke-miterlimit:10;}
                         </style> -->
+                        <defs>
+                            <filter id="green-glow" filterUnits="userSpaceOnUse"
+                                    x="-50%" y="-50%" width="200%" height="200%">
+                               <!-- blur the text at different levels-->
+                              <feGaussianBlur in="SourceGraphic" stdDeviation="5" result="blur5"/>
+                              <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur10"/>
+                              <feGaussianBlur in="SourceGraphic" stdDeviation="20" result="blur20"/>
+                              <feGaussianBlur in="SourceGraphic" stdDeviation="30" result="blur30"/>
+                              <feGaussianBlur in="SourceGraphic" stdDeviation="50" result="blur50"/>
+                              <!-- merge all the blurs except for the first one -->
+                              <feMerge result="blur-merged">
+                                <feMergeNode in="blur10"/>
+                                <feMergeNode in="blur20"/>
+                                <feMergeNode in="blur30"/>
+                                <feMergeNode in="blur50"/>
+                              </feMerge>
+                              <!-- recolour the merged blurs red-->
+                              <feColorMatrix result="green-blur" in="blur-merged" type="matrix"
+                                             values="1 0 0 0 0
+                                                     0 0.06 0 0 0
+                                                     0 0 0.44 0 0
+                                                     0 0 0 1 0" />
+                              <feMerge>
+                                <feMergeNode in="green-blur"/>       <!-- largest blurs coloured green -->
+                                <feMergeNode in="blur5"/>          <!-- smallest blur left white -->
+                                <feMergeNode in="SourceGraphic"/>  <!-- original white text -->
+                              </feMerge>
+                            </filter>
+                          </defs>
                         <g>
                             <path d="M106.23,41.65h9.43l2.61,1.66v9.27l-2.61,1.66h-5.26v8.39h-4.17V41.65z M114.1,51.48v-7.06l-0.87-0.55h-2.82v8.17h2.82
                                 L114.1,51.48z"/>
@@ -30,7 +59,7 @@
                             <path d="M469.77,62.62h-4.17l-2.91-6.79l-2.78,6.79h-4l4.91-10.68l-4.69-10.29h4.17l2.65,6.57l2.61-6.57h4l-4.69,10.29
                                 L469.77,62.62z"/>
                         </g>
-                        <g class = "head">
+                        <g class = "head" filter="url(#green-glow)">
                             <polygon class="st0" points="530.07,168.5 428.1,290.41 417.87,301.54 369.03,354.72 206.97,354.72 158.13,301.54 147.9,290.41 
                                 45.93,168.5 101.78,87.36 474.22,87.36 	"/>
                         </g>
@@ -44,7 +73,7 @@
             <!-- Splash Nav -->
             <div id="splash-nav">
                 <nav>
-                    <a href="" class = "button">coming soon...</a>
+                    <a href="" class = "button">F A L L   &nbsp;&nbsp;  2 0 2 0</a>
                 </nav>
             </div>
         </div> 
