--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <!-- Splash Nav -->
             <div id="splash-nav">
                 <nav>
-                    <a href="" class = "button">F A L L   &nbsp;&nbsp;  2 0 2 0</a>
+                    <a href="" class = "button">W I N T E R   &nbsp;  2 0 2 0</a>
                 </nav>
             </div>
         </div> 
