--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                     <a href="" class = "button">D E C E M B E R  &nbsp;  2 0 2 0</a>
                 </nav>
             </div>
+            <div id="splash-nav">
+                <footer>
+                    <p class = "footer">&copy;PYTHONEX 2020</p>
+                </footer>
+            </div>
         </div> 
     <!-- JS -->
     <script src="js/jquery-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
