--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/style.css">
 
     <body> 
-        <div class="wrapper"> 
+        <div class="wrapper content"> 
             <div id="target">
                 <!-- Pythonex Logo -->
                 <figure>
@@ -76,9 +76,9 @@
                     <a href="" class = "button">D E C E M B E R  &nbsp;  2 0 2 0</a>
                 </nav>
             </div>
-            <div id="splash-nav">
-                <footer>
-                    <p class = "footer">&copy;PYTHONEX 2020</p>
+            <div>
+                <footer class = "footer">
+                    <p>&copy;PYTHONEX 2020</p>
                 </footer>
             </div>
         </div> 
