--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Pythonex" />
+	<meta name="title" property="og:title" content="Pythonex" />
+	<meta property="og:type" content="Website" />
+	<meta name="image" property="og:image" content="/img/pythonex_logo.png" />
+	<meta name="description" property="og:description" content="Pythonex" />
+	<meta name="author" content="Lukas Jorgensen" />
         <title>Pythonex</title>
         <link rel="stylesheet" href="css/style.css">
 
